@@ -1,3 +1,5 @@
+
+Apr 01, 2009: libarchive 2.6.990a released
 Jan 04, 2008: Major refactoring of read filter support.
 
 Dec 28, 2008: Many Windows/Visual Studio fixes from Michihiro NAKAJIMA.
